--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,19 @@
-
+@font-face{
+    font-family:'Hind Siliguri' ;
+    src: 
+    url(./fonts/HindSiliguri-Regular.woff2) format('woff2'),
+    url(./fonts/HindSiliguri-Regular.woff) format('woff'),
+    url(./fonts/HindSiliguri-Regular.ttf) format('truetrype');
+    font-display: swap;
+}
 *{
     margin: 0px;
     padding: 0px;
     border: 0px;
     box-sizing: border-box;
     min-width: 0;
+    font-family: 'Hind Siliguri';
+    color: black;
 }
 h1,h2,h3,h4{
     text-wrap: balance;
@@ -29,10 +38,56 @@ body{
     overflow: hidden;
     gap: 1rem;
 }
-.weather{
+.inputSearch{
     grid-column: 3/5;
     grid-row: 1/2;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+
+    form{
+        width: 100%;
+        height: 90%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: black;
+        width: 23rem;
+        height: 3rem;
+        gap: 1.5rem;
+        border-radius: 3rem;
+        background-color:rgba(107, 156, 180, 1);
+
+        select{
+            border-radius: 1rem;
+            width: 4rem;
+            height: 2rem;
+            background-color: #6b9cb480;
+            padding-right: .1rem;
+            outline: none;
+        }
+        input[type='text']{
+            width: 80%;
+            height: 50%;
+            padding-left: 1rem;
+            border-radius: 1rem;
+            color: whitesmoke;
+            font-size: 1rem;
+            background-color: #6b9cb480;
+            outline: none;
+        }
+        input[type='submit']{
+            appearance: none;
+            border-radius: 50%;
+            width: 2rem;
+            height: 2rem;
+            background: url('./arrow-right.svg') no-repeat right;
+            background-color: rgb(255, 255, 255, .3);
+        }
+    }  
 }
+
 .weather-time{
     display: flex;
     flex-direction: row;
@@ -42,9 +97,8 @@ body{
     flex-wrap: wrap;
     width: 100%;
     height: 100%;
-    border: 1px solid #89CFF3;
     border-radius: 2rem;
-    background-color:#6b9cb480;;
+    background-color:#6b9cb480;
 }
 #weather-time-wrap{
     grid-column: 1/5;
@@ -64,17 +118,14 @@ body{
     flex-direction: column;
 }
 .section-data-weather{
-    border: 1px solid #89CFF3;
-    width: 90%;
-    height: 90%;
+    width: 100%;
+    height: 100%;
     border-radius: 2rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     align-content: center;
     justify-content: center;
-    width: 100%;
-    height: 100%;
     background-color: #6b9cb480;
 
     h2{
@@ -87,6 +138,11 @@ body{
         display: flex;
         flex-direction:column;
         font-size: 1.5rem;
+    }
+
+    img{
+        width: 10rem;
+        height: 10rem;
     }
 }
 .feels-like{
