--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@
     box-sizing: border-box;
     min-width: 0;
     font-family: 'Hind Siliguri';
-    color: black;
+    color: #F3FAFF;
 }
 h1,h2,h3,h4{
     text-wrap: balance;
@@ -26,20 +26,61 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(to bottom, #00A9FF, #89CFF3)
+    background:#393E46;
 }
 #wrap-main{
     width: 90vw;
     height: 90vh;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: .2fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: .2fr 1fr 1fr 1fr 1fr;
     border-radius: 2rem;
     overflow: hidden;
     gap: 1rem;
 }
+#section-feels-like{
+    grid-column: 4/5;
+    grid-row: 2/3;
+}
+#section-humidity{
+    grid-column: 5/6;
+    grid-row: 2/3;
+}
+#section-sunset{
+    grid-column: 6/7;
+    grid-row: 2/4;
+}
+#section-wind-speed{
+    grid-column: 4/6;
+    grid-row: 3/5;
+}
+#section-visibility{
+    grid-column: 6/7;
+    grid-row: 4/5;
+}
+#section-daily-weather{
+    grid-column: 3/4;
+    grid-row: 1/4;
+}
+#weather-time-wrap{
+    grid-column: 1/7;
+    grid-row: 5/6;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    width: 100%;
+}
+.current-weather{
+    grid-column: 1/3;
+    grid-row: 1/5;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
 .inputSearch{
-    grid-column: 3/5;
+    grid-column: 4/7;
     grid-row: 1/2;
     display: flex;
     flex-direction: row;
@@ -57,13 +98,13 @@ body{
         height: 3rem;
         gap: 1.5rem;
         border-radius: 3rem;
-        background-color:rgba(107, 156, 180, 1);
+        background-color:#45566D;
 
         select{
             border-radius: 1rem;
             width: 4rem;
             height: 2rem;
-            background-color: #6b9cb480;
+            background-color: #45566D;
             padding-right: .1rem;
             outline: none;
         }
@@ -72,9 +113,9 @@ body{
             height: 50%;
             padding-left: 1rem;
             border-radius: 1rem;
-            color: whitesmoke;
+            color: #F3FAFF;
             font-size: 1rem;
-            background-color: #6b9cb480;
+            background-color: #45566D;
             outline: none;
         }
         input[type='submit']{
@@ -98,25 +139,10 @@ body{
     width: 100%;
     height: 100%;
     border-radius: 2rem;
-    background-color:#6b9cb480;
+    background-color: #45566D;
+    padding: 1rem;
 }
-#weather-time-wrap{
-    grid-column: 1/5;
-    grid-row: 4/5;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-    width: 100%;
-}
-.current-weather{
-    grid-column: 1/3;
-    grid-row: 1/4;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-}
+
 .section-data-weather{
     width: 100%;
     height: 100%;
@@ -126,7 +152,7 @@ body{
     align-items: center;
     align-content: center;
     justify-content: center;
-    background-color: #6b9cb480;
+    background-color:#45566D;
 
     h2{
         font-size: 7rem;
@@ -148,13 +174,10 @@ body{
 .feels-like{
     width: 100%;
     height: 100%;
-    border-radius: 2rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color:#6b9cb480;;
-
     h2{
         font-size: 2rem;
     }
@@ -166,6 +189,26 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
+    background: #0097FA;
+    border-radius: 2rem;
+    padding: 1rem;
+}
+.title-div-style{
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: flex-end;
+    width: 100%;
+    gap: .5rem;
+
+    img{
+        width: 20px;
+        height: 20px;
+    }
+    h2{
+        font-size: 1.3rem;
+    }
 }
 .box-daily-weather{
     display: flex;
@@ -173,4 +216,8 @@ body{
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
+}
+
+.daily-weather{
+    display: flex;
 }
