--- a/styles.css
+++ b/styles.css
@@ -34,11 +34,16 @@ body{
     height: 90vh;
     display: grid;
     grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: .2fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: .4fr 1fr 1fr 1fr 1fr;
+    align-items: center;
     border-radius: 2rem;
     overflow: hidden;
     gap: 1rem;
     position: absolute;
+}
+#logo-btn-div{
+    grid-column: 6/7;
+    grid-row: 1/2;
 }
 #section-feels-like{
     grid-column: 4/5;
@@ -85,7 +90,7 @@ body{
     animation: moverdown 600ms ease-out 2700ms forwards;
 
     .feels-like{
-        animation: opacity 400ms ease-in 3200ms forwards;
+        animation: opacity 400ms ease-in 3000ms forwards;
     }
 }
 #section-visibility{
@@ -122,8 +127,16 @@ body{
         flex-direction: row;
         justify-content: center;
         align-items: center;
-        gap: 1rem;
+        gap: .5rem;
         opacity: 0;
+
+        h5{
+            font-size: small;
+            text-align: center;
+        }
+        h3{
+            font-size:large;
+        }
     }
     .daily-weather:nth-child(2){
         animation: opacity 400ms ease-in 1200ms forwards;
@@ -194,9 +207,10 @@ body{
     .box-time-weather:nth-child(9){
         animation: opacity 400ms ease-in 3200ms forwards;
     }
-    
 }
 .current-weather{
+    height: 100%;
+    width: 100%;
     position: relative;
     z-index: 10;
     grid-column: 1/3;
@@ -238,25 +252,29 @@ body{
     }
 }
 .inputSearch{
-    grid-column: 4/7;
+    grid-column: 4/6;
     grid-row: 1/2;
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
+    gap: 1rem;
+    position: absolute;
 
     form{
-        width: 100%;
-        height: 90%;
         display: flex;
         align-items: center;
         justify-content: center;
         color: black;
-        width: 23rem;
+        width: 3rem;
         height: 3rem;
         gap: 1.5rem;
         border-radius: 3rem;
         background-color:#45566D;
+        position: relative;
+        z-index: 5;
+        opacity: 0;
+        animation: width 1500ms ease-in 1500ms forwards ;
 
         select{
             border-radius: 1rem;
@@ -275,6 +293,10 @@ body{
             font-size: 1rem;
             background-color: #45566D;
             outline: none;
+            opacity: 0;
+            position: relative;
+            z-index: 6;
+            animation: opacity 600ms ease-in 2100ms forwards;
         }
         input[type='submit']{
             appearance: none;
@@ -283,8 +305,64 @@ body{
             height: 2rem;
             background: url('./arrow-right.svg') no-repeat right;
             background-color: rgb(255, 255, 255, .3);
+            position: relative;
+            z-index: 7;
+            animation: move-arrow 1500ms ease-in-out 1900ms forwards;
         }
     }  
+    .alert-message{
+        text-align: center;
+        width: 16vw;
+        background-color: #b44343;
+        color: #F3FAFF;
+        border-radius: 2rem;
+        font-family:  'Hind Siliguri', sans-serif, Georgia, 'Times New Roman', Times, serif;
+        font-size: large;
+        padding: .2rem .5rem;
+        position: relative;
+        z-index: 7;
+        right: 23.5rem;
+        
+    }
+}
+
+#logo-btn-div{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 1rem;
+    opacity: 0;
+    animation: opacity 1000ms ease-out 3900ms forwards ;
+
+    div{
+        background-color: #ce6d5b;
+        height: 1rem;
+        width: 1rem;
+        border-radius: 1rem;
+    }
+    button{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: #F3FAFF;
+        color: #393E46;
+        border-radius: 15rem;
+        width: auto;
+        height: auto;
+        padding: .2rem;
+        cursor: pointer;
+        transition: scale ease-out 100ms;
+
+        &:hover{
+            transition: scale ease-in 200ms;
+            scale: 1.2;
+        }
+
+        img{
+            filter: invert();
+            
+        }
+    }
 }
 
 /* Estilos Generales */
@@ -323,6 +401,8 @@ body{
     justify-content: flex-end;
     width: 100%;
     gap: .5rem;
+    opacity: 0;
+    animation: opacity 1000ms ease-in 800ms forwards;
 
     img{
         width: 20px;
@@ -334,6 +414,7 @@ body{
     }
 }
 
+/*Animation*/
 
 @keyframes prueba{
     0%{
@@ -415,5 +496,41 @@ body{
 @keyframes opacity {
     100%{
         opacity: 1;
+    }
+}
+
+@keyframes width {
+    0%{
+        transform: translate(-17vw, 0);
+        opacity: 0;
+    }
+    50%{
+        transform: translate(0,0);
+        opacity:1;
+        width: 3rem;
+    }
+    100%{
+        width: 23rem;
+        opacity: 1;
+    }
+}
+
+@keyframes move-arrow{
+    0%{
+        transform: translate(-2vw,0);
+        opacity: 0;
+    }
+    100%{
+        transform: translate(0,0);
+        opacity: 1;
+    }
+}
+
+@keyframes opacity-all{
+    0%{
+        opacity: 0%;
+    }
+    100%{
+        opacity: 100%;
     }
 }
